<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="login">Add Logins</string>
	<string name="empty">No records found.</string>
	<string name="app_name">Password Juggler</string>
	<string name="password">Password</string>
	<string name="cancel">Cancel</string>
	<string name="dialogtitle">Password Juggler Login</string>

	<string name="createnew">Create New Entry</string>
	<string name="genpasswords">Generate Password</string>
	<string name="wallet">Add Wallet Item</string>
	 <string name="notes">Add Notes</string>
	 
	 <string name="basicInfo">Standard Fields</string>
	 
	 
	 <string name="settings">Settings</string>
	  <string name="url">URL</string>
	 <string name="title">Title</string>
	 <string name="email">Email</string>
	  <string name="save">Save</string>
	  <string name="edit">Edit</string>
	  <string name="commit">Done</string>
	  <string name="next">Next</string>
	  <string name="username">Username</string>
	  <string name="viewDirections">Click row to copy value.</string>
	  <string name="editDirections">Click row to edit, hold to delete.</string>
	  
	  <string name="usage">What are you using this for?</string>
	  <string name="note">Notes</string>
	  <string name="allpasswords">All Wallet Items</string>
	  <string name="allnotes">All Note Items</string>
	  <string name="alllogins">All Login Items</string>
	  <string name="allgenpasswords">All Passwords</string>
	  
	  <string name="showpassword">Conceal passwords</string>
	  <string name="changepassword">Change password</string>
	  <string name="autolock">Auto Lock</string>
	  <string name="database">Reset database</string>
	  <string name="newrow">New Row</string>
	  <string name="label">New Label</string>
	  <string name="value">New Value</string>
	  <string name="delete">Delete</string>
	  
	  <string name="newpassword">New Password</string>
	  <string name="confirmnew">Confirm Password</string>
	  
	  <string name="extraprotection">Set Extra Protection</string>
	  <string name="setuppassword">Setup Password</string>
	  
	  <string name="min1">1 Minute</string>
	  <string name="min2">2 Minute</string>
	  <string name="min3">3 Minute</string>
	  <string name="min4">4 Minute</string>
	  <string name="min5">5 Minute</string>
	  <string name="min10">10 Minute</string>
	  
	  <string name="confirmrest">You are about to delete all your passwords and the database are you sure you want to do this?</string>
	  <string name="loginInstructions">Before you begin you will need to set up your data protection. \n\nSet a password that you will use to login to the application. Make sure this is a secure password. We suggest you use numbers and mixed case letters for the password.</string>
	  
</resources>
