<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content" android:paddingTop="50sp"
	android:layout_width="fill_parent">

	<TableLayout android:layout_height="wrap_content" android:background="@drawable/base_bg"
		android:layout_width="fill_parent" android:padding="10sp" android:id="@+id/tbone">
		<TableLayout android:layout_height="wrap_content"
	android:layout_width="fill_parent" android:background="@drawable/list_item" android:padding="10sp">
	<TextView android:id="@+id/TextView02"
			android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/newpassword" android:textColor="#000" android:layout_marginLeft="5sp"></TextView>
			<EditText android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/etNewPassword1"
			android:inputType="textPassword" android:textColor="#000"></EditText>
		<TextView android:id="@+id/TextView02"
			android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/confirmnew" android:textColor="#000" android:layout_marginLeft="5sp"></TextView>
			<EditText android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/etNewPassword2"
			android:inputType="textPassword" android:textColor="#000"></EditText>
			</TableLayout>
		<TextView android:id="@+id/TextView01" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:background="@drawable/list_item"
			android:text="@string/loginInstructions"
			android:textColor="#000" android:padding="15sp" android:layout_marginTop="10sp"></TextView>
		
	</TableLayout>
</LinearLayout>
