<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content" android:paddingTop="50sp"
	android:layout_width="fill_parent">
	<TableLayout android:id="@+id/LinearLayout01"
		android:layout_height="wrap_content" android:background="@drawable/base_bg"
		android:layout_width="fill_parent" android:padding="10sp">
		<RelativeLayout android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:background="@drawable/list_item"
			android:gravity="center_vertical" android:padding="10sp"
			android:id="@+id/showPasswords">
			<TextView android:id="@+id/TextView01" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/showpassword"
				android:textColor="#000" android:layout_marginLeft="5sp"
				android:layout_marginRight="5sp" android:layout_centerVertical="true"></TextView>
			<ToggleButton android:text="@+id/tbShowCleartext"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:id="@+id/tbClearText" android:layout_alignParentRight="true"
				android:layout_centerInParent="true"></ToggleButton>
		</RelativeLayout>
		<RelativeLayout android:layout_height="wrap_content" android:layout_marginTop="10sp"
			android:layout_width="fill_parent" android:background="@drawable/list_item"
			android:gravity="center_vertical" android:padding="10sp"
			android:id="@+id/resetdb">
			<TextView android:id="@+id/TextView01" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/database"
				android:textColor="#000" android:layout_marginLeft="5sp"
				android:layout_marginRight="5sp" android:layout_centerVertical="true"></TextView>
			<ToggleButton android:text="@+id/tbResetDB"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:id="@+id/tbClearText" android:layout_alignParentRight="true"
				android:layout_centerInParent="true"></ToggleButton>
		</RelativeLayout>
		<LinearLayout android:background="@drawable/list_item"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_marginTop="10sp">
			<TextView android:id="@+id/tvChangePassword"
				android:layout_height="wrap_content" android:text="@string/changepassword"
				android:textColor="#000" android:layout_width="fill_parent"
				android:background="@drawable/item_spacer_arw" android:gravity="center_vertical"
				android:layout_marginLeft="10sp"></TextView>
		</LinearLayout>
		<LinearLayout android:background="@drawable/list_item"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_marginTop="10sp">
			<TextView android:id="@+id/tvAutoLock"
				android:layout_height="wrap_content" android:textColor="#000" android:layout_width="fill_parent"
				android:background="@drawable/item_spacer_arw" android:gravity="center_vertical"
				android:layout_marginLeft="10sp" android:text="@string/autolock"></TextView>
		</LinearLayout>
	</TableLayout>
</LinearLayout>
